--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,37 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 
 body{
-    background: white;
+    background: green;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border-radius: 10px;
+    margin: 0 auto;
+    margin-top: 5dvh;
+    width: 300px;
+    height: 475px;
+    overflow: hidden;
+}
+
+.card-header{
+    background-color: white;
+    font-size: 4rem;
+    border: none;
+}
+
+.card-content{
+    height: 80%;
+    margin: 0 auto;
+    background-color: white;
+    
+    font-size: 10rem;
+}
+.card-footer{
+    border: none;
+    background-color: white;
+    text-align: end;
+    font-size: 4rem;
 }
